# image-label

./: README.md  common_bus.py  figure.py  gui.py  helpers.py  history.py  main.py  project.py  pyproject.toml  requirements.txt  statechart.py
exporters/: yolo.py
image_label/: common_bus.py  figure.py  gui.py  helpers.py  main.py  project.py  statechart.py
image_label/exporters/: image_folder.py  yolo.py
src/: figure.py  gui.py  helpers.py  main.py  project.py  statechart.py
src/exporters/: yolo.py
tests/: non-empty.blp  test_exporters_yolo.py  test_gui_structure.py  test_history.py  test_project.py  test_states.py
tests/assets/: domik.blp  domik.boobalp  empty.boobalp  non-empty.blp
