[project]
name = "booba-label"
version = "0.1"
authors = [
    { name="vkalyvayut-roboty-a-ne-chelovek" }
]
description = "Simple Python Tkinter image labelling app for ML purposes"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/vkalyvayut-roboty-a-ne-chelovek/booba-label"
Issues = "https://github.com/vkalyvayut-roboty-a-ne-chelovek/booba-label/issues"